# stable-fluids

./: .gitignore  CMakeLists.txt  README.md  backend-cpu.cpp  backend-cuda.cu  backend-parallel.cpp  benchmark.cu  main.cu  runtime-cuda.cu  stable-fluids-3d.h  stable-fluids.h  stable_fluids_sig1999.py  validate.cpp
.github/workflows/: arch-build.yml  windows-build.yml
vulkan-app/: CMakeLists.txt  app.cpp  app.ixx  main.cpp  scene_cloud.cpp  scene_cloud.ixx  scene_plume.cpp  scene_plume.ixx  stable_simulation.cpp  stable_simulation.hpp
vulkan-app/modules/: viz.snapshot.ixx  vk.camera.ixx  vk.context.ixx  vk.frame.ixx  vk.geometry.ixx  vk.math.ixx  vk.swapchain.ixx
vulkan-app/shaders/: background.slang  field_plane.slang  field_volume.slang  scene_cloud_volume.slang  smoke_volume.slang
vulkan-app/src/: viz.snapshot.cpp  vk.camera.cpp  vk.context.cpp  vk.math.cpp  vk.pipeline.cpp  vk.texture.cpp
